Bug 281074 - Plasma crash when connecting to wired connection
Summary: Plasma crash when connecting to wired connection
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 281205 284364 284910 285376 287107 289329 292554 303089 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-08-30 23:49 UTC by Yasha B.-K.
Modified: 2014-03-20 21:34 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (33.03 KB, text/plain)
2012-03-16 03:30 UTC, markstevensonjr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yasha B.-K. 2011-08-30 23:49:06 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.5 (4.6.5)
Qt Version: 4.7.3
Operating System: Linux 2.6.40.3-0.fc15.i686 i686
Distribution (Platform): Fedora RPMs

-- Information about the crash:
Plasma crashed when attempting to connect to a wired connection. This does not happen every time.

-- Backtrace:
Application: Plasma Desktop Shell (plasma-desktop), signal: Segmentation fault
[KCrash Handler]
#7  0x00000061 in ?? ()
#8  0x435a6529 in QObject::disconnect (sender=0x9b144a0, signal=0x0, receiver=0x95eaf68, method=0x0) at kernel/qobject.cpp:2728
#9  0x00792eaf in InterfaceItem::currentConnectionChanged (this=0x95eaf68) at /usr/src/debug/networkmanagement-0.9/applet/interfaceitem.cpp:330
#10 0x0079328d in InterfaceItem::connectionStateChanged (this=0x95eaf68, state=Solid::Control::NetworkInterfaceNm09::Unavailable) at /usr/src/debug/networkmanagement-0.9/applet/interfaceitem.cpp:438
#11 0x0079312b in InterfaceItem::handleConnectionStateChange (this=0x95eaf68, new_state=20, old_state=70, reason=40) at /usr/src/debug/networkmanagement-0.9/applet/interfaceitem.cpp:377
#12 0x00784247 in InterfaceItem::qt_metacall (this=0x95eaf68, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfa123f0) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/applet/moc_interfaceitem.cpp:122
#13 0x43598e9e in metacall (argv=0xbfa123f0, idx=49, cl=QMetaObject::InvokeMetaMethod, object=0x95eaf68) at kernel/qmetaobject.cpp:237
#14 QMetaObject::metacall (object=0x95eaf68, cl=QMetaObject::InvokeMetaMethod, idx=49, argv=0xbfa123f0) at kernel/qmetaobject.cpp:232
#15 0x435a6d6a in QMetaObject::activate (sender=0x9553498, m=0xaff83c, local_signal_index=3, argv=0xbfa123f0) at kernel/qobject.cpp:3278
#16 0x00af37a6 in Solid::Control::NetworkInterfaceNm09::connectionStateChanged (this=0x9553498, _t1=20, _t2=70, _t3=40) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/libs/solid/control/networkinterface.moc:167
#17 0x00af383e in Solid::Control::NetworkInterfaceNm09::qt_metacall (this=0x9553498, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0xbfa12550) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/libs/solid/control/networkinterface.moc:135
#18 0x00af5823 in Solid::Control::WiredNetworkInterfaceNm09::qt_metacall (this=0x9553498, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfa12550) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/libs/solid/control/wirednetworkinterface.moc:74
#19 0x43598e9e in metacall (argv=0xbfa12550, idx=7, cl=QMetaObject::InvokeMetaMethod, object=0x9553498) at kernel/qmetaobject.cpp:237
#20 QMetaObject::metacall (object=0x9553498, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0xbfa12550) at kernel/qmetaobject.cpp:232
#21 0x435a6d6a in QMetaObject::activate (sender=0x941e0e8, m=0xb7b730, local_signal_index=2, argv=0xbfa12550) at kernel/qobject.cpp:3278
#22 0x00b5d436 in NMNetworkInterface::connectionStateChanged (this=0x941e0e8, _t1=20, _t2=70, _t3=40) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/solid/networkmanager-0.9/networkinterface.moc:190
#23 0x00b5eac6 in NMNetworkInterface::stateChanged (this=0x941e0e8, new_state=20, old_state=70, reason=40) at /usr/src/debug/networkmanagement-0.9/solidcontrolfuture/solid/networkmanager-0.9/networkinterface.cpp:284
#24 0x00b5eb95 in NMNetworkInterface::qt_metacall (this=0x941e0e8, _c=QMetaObject::InvokeMetaMethod, _id=3, _a=0xbfa12750) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/solid/networkmanager-0.9/networkinterface.moc:124
#25 0x00b62703 in NMWiredNetworkInterface::qt_metacall (this=0x941e0e8, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfa12750) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/solid/networkmanager-0.9/wirednetworkinterface.moc:87
#26 0x43598e9e in metacall (argv=0xbfa12750, idx=7, cl=QMetaObject::InvokeMetaMethod, object=0x941e0e8) at kernel/qmetaobject.cpp:237
#27 QMetaObject::metacall (object=0x941e0e8, cl=QMetaObject::InvokeMetaMethod, idx=7, argv=0xbfa12750) at kernel/qmetaobject.cpp:232
#28 0x435a6d6a in QMetaObject::activate (sender=0x954555c, m=0xb7c618, local_signal_index=0, argv=0xbfa12750) at kernel/qobject.cpp:3278
#29 0x00b6bba6 in OrgFreedesktopNetworkManagerDeviceInterface::StateChanged (this=0x954555c, _t1=20, _t2=70, _t3=40) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/solid/networkmanager-0.9/nm-deviceinterface.moc:152
#30 0x00b6bc4b in OrgFreedesktopNetworkManagerDeviceInterface::qt_metacall (this=0x954555c, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbfa1298c) at /usr/src/debug/networkmanagement-0.9/i686-redhat-linux-gnu/solidcontrolfuture/solid/networkmanager-0.9/nm-deviceinterface.moc:101
#31 0x4381b838 in QDBusConnectionPrivate::deliverCall (this=0x8f2bbc8, object=0x954555c, msg=..., metaTypes=..., slotIdx=152304672) at qdbusintegrator.cpp:941
#32 0x43825dd7 in QDBusCallDeliveryEvent::placeMetaCall (this=0x9d04f20, object=0x954555c) at qdbusintegrator_p.h:103
#33 0x435aabbf in QObject::event (this=0x954555c, e=0x9d04f20) at kernel/qobject.cpp:1217
#34 0x43e0d464 in notify_helper (e=0x9d04f20, receiver=0x954555c, this=0x8e9fd38) at kernel/qapplication.cpp:4462
#35 QApplicationPrivate::notify_helper (this=0x8e9fd38, receiver=0x954555c, e=0x9d04f20) at kernel/qapplication.cpp:4434
#36 0x43e128a3 in QApplication::notify (this=0x9d04f20, receiver=0x954555c, e=0x9d04f20) at kernel/qapplication.cpp:4209
#37 0x49b7a8c2 in KApplication::notify (this=0x8e91c48, receiver=0x954555c, event=0x9d04f20) at /usr/src/debug/kdelibs-4.6.5/kdeui/kernel/kapplication.cpp:311
#38 0x435926be in QCoreApplication::notifyInternal (this=0x8e91c48, receiver=0x954555c, event=0x9d04f20) at kernel/qcoreapplication.cpp:731
#39 0x43596148 in sendEvent (event=<optimized out>, receiver=<optimized out>) at kernel/qcoreapplication.h:215
#40 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x8e5ac10) at kernel/qcoreapplication.cpp:1372
#41 0x4359630d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#42 0x435c08f5 in sendPostedEvents () at kernel/qcoreapplication.h:220
#43 postEventSourceDispatch (s=0x8ea2d00) at kernel/qeventdispatcher_glib.cpp:277
#44 0x42ae55bf in g_main_dispatch (context=0x8ea2c70) at gmain.c:2441
#45 g_main_context_dispatch (context=0x8ea2c70) at gmain.c:3014
#46 0x42ae5d30 in g_main_context_iterate (context=0x8ea2c70, block=1118784128, dispatch=1, self=0x8ea5ca0) at gmain.c:3092
#47 0x42ae606f in g_main_context_iteration (context=0x8ea2c70, may_block=1) at gmain.c:3155
#48 0x435c0d38 in QEventDispatcherGlib::processEvents (this=0x8e5bb30, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#49 0x43ec1cab in QGuiEventDispatcherGlib::processEvents (this=0x8e5bb30, flags=...) at kernel/qguieventdispatcher_glib.cpp:207
#50 0x435919fe in QEventLoop::processEvents (this=0xbfa13144, flags=...) at kernel/qeventloop.cpp:149
#51 0x43591c51 in QEventLoop::exec (this=0xbfa13144, flags=...) at kernel/qeventloop.cpp:201
#52 0x435963bb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#53 0x43e0b245 in QApplication::exec () at kernel/qapplication.cpp:3736
#54 0x006b6dd6 in kdemain (argc=1, argv=0xbfa13344) at /usr/src/debug/kdebase-workspace-4.6.5/plasma/desktop/shell/main.cpp:120
#55 0x0804876c in main (argc=1, argv=0xbfa13344) at /usr/src/debug/kdebase-workspace-4.6.5/i686-redhat-linux-gnu/plasma/desktop/shell/plasma-desktop_dummy.cpp:3

This bug may be a duplicate of or related to bug 266097.

Possible duplicates by query: bug 278160, bug 277037, bug 274183, bug 271039, bug 269733.

Reported using DrKonqi
Comment 1 Lamarque V. Souza 2011-08-31 01:13:19 UTC
Git commit ceba2d13c69f415dd06eb9a5351d9969d23de876 by Lamarque V. Souza.
Committed on 31/08/2011 at 03:10.
Pushed by lvsouza into branch 'master'.

Update current connectin pointer when it is deleted.

BUG: 281074

M  +2    -0    applet/interfaceitem.h
M  +14   -0    applet/interfaceitem.cpp

http://commits.kde.org/networkmanagement/ceba2d13c69f415dd06eb9a5351d9969d23de876
Comment 2 Lamarque V. Souza 2011-08-31 01:14:15 UTC
Git commit 0e0fa354f69c977abbefded9357d6c6048605460 by Lamarque V. Souza.
Committed on 31/08/2011 at 03:05.
Pushed by lvsouza into branch 'nm09'.

Update current connectin pointer when it is deleted.

BUG: 281074

M  +1    -0    applet/interfaceitem.h
M  +7    -0    applet/interfaceitem.cpp

http://commits.kde.org/networkmanagement/0e0fa354f69c977abbefded9357d6c6048605460
Comment 3 Lamarque V. Souza 2011-09-02 11:03:11 UTC
*** Bug 281205 has been marked as a duplicate of this bug. ***
Comment 4 Lamarque V. Souza 2011-10-18 20:59:47 UTC
*** Bug 284364 has been marked as a duplicate of this bug. ***
Comment 5 Lamarque V. Souza 2011-10-25 07:04:07 UTC
*** Bug 284910 has been marked as a duplicate of this bug. ***
Comment 6 Lamarque V. Souza 2011-10-31 15:14:23 UTC
*** Bug 285376 has been marked as a duplicate of this bug. ***
Comment 7 Lamarque V. Souza 2011-11-21 14:29:46 UTC
*** Bug 287107 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2011-12-19 10:29:31 UTC
*** Bug 289329 has been marked as a duplicate of this bug. ***
Comment 9 markstevensonjr 2012-03-16 03:30:05 UTC
Created attachment 69656 [details]
New crash information added by DrKonqi

plasma-desktop (0.4) on KDE Platform 4.7.4 (4.7.4) using Qt 4.7.4

- What I was doing when the application crashed:
I noticed that my wired connection was disconnected shortly after waking up the computer. I went the reconnect throught the system tray network manager and thats when plasma crashed. I have yet to try again, and it has not happened like that before.

-- Backtrace (Reduced):
#7  0x00007f8acfc42714 in QObject::disconnect (sender=0x20bb520, signal=0x0, receiver=0x2d76100, method=0x0) at kernel/qobject.cpp:2728
#8  0x00007f8aa75e5971 in InterfaceItem::currentConnectionChanged (this=0x2d76100) at ../../applet/interfaceitem.cpp:330
#9  0x00007f8aa75e5c56 in InterfaceItem::connectionStateChanged (this=0x2d76100, state=Solid::Control::NetworkInterfaceNm09::Disconnected) at ../../applet/interfaceitem.cpp:442
#10 0x00007f8aa75d8cf1 in InterfaceItem::qt_metacall (this=0x2d76100, _c=QMetaObject::InvokeMetaMethod, _id=<optimized out>, _a=0x7fff66d619d0) at moc_interfaceitem.cpp:122
[...]
#12 0x00007f8aa6ab8f8d in Solid::Control::NetworkInterfaceNm09::connectionStateChanged (this=<optimized out>, _t1=30, _t2=70, _t3=0) at ./networkinterface.moc:167
Comment 10 Jekyll Wu 2012-07-06 10:47:57 UTC
*** Bug 303089 has been marked as a duplicate of this bug. ***
Comment 11 Lamarque V. Souza 2014-03-20 21:34:29 UTC
*** Bug 292554 has been marked as a duplicate of this bug. ***