Update current connectin pointer when it is deleted.

BUG: 281074