applet/interfaceitem.cpp
@@ -68,6 +68,7 @@ InterfaceItem::InterfaceItem(Solid::Control::NetworkInterfaceNm09 * iface, Remot
     m_starting(true)
 {
     connect(m_activatables, SIGNAL(disappeared()), this, SLOT(serviceDisappeared()));
+    connect(m_activatables, SIGNAL(activatableRemoved(RemoteActivatable*)), this, SLOT(activatableRemoved(RemoteActivatable*)));
     setDrawBackground(true);
     setTextBackgroundColor(QColor(Qt::transparent));
     QString tt = i18nc("tooltip on the LHS widgets", "Click here for interface details");
@@ -484,4 +485,10 @@ void InterfaceItem::serviceDisappeared()
     m_currentConnection = 0;
 }
 
+void InterfaceItem::activatableRemoved(RemoteActivatable * activatable)
+{
+    if (activatable == m_currentConnection) {
+        m_currentConnection = 0;
+    }
+}
 // vim: sw=4 sts=4 et tw=100
