applet/interfaceitem.h
@@ -153,5 +153,6 @@ protected Q_SLOTS:
 private Q_SLOTS:
     void emitDisconnectInterfaceRequest();
     void serviceDisappeared();
+    void activatableRemoved(RemoteActivatable*);
 };
 #endif // APPLET_INTERFACEWIDGET_H
